--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   background: rgba(255, 255, 255, 0.30);
   border: 1px solid rgba(255, 255, 255, 0.34);
   flex-basis: 400px;
-  height: 540px;
+  height: 680px;
   padding: 20px 35px;
 }
 
@@ -78,7 +78,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.01);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(35, 35, 35, 0.1);
-  color: #232323;
+  color: #fff;
   background: #d72880;
 }
 
@@ -101,4 +101,11 @@ body {
 
 .triple {
   flex-basis: 73%;
+}
+
+.title {
+  color: #fff;
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 24px;
 }
